implemented enum for patterns